--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "@types/node": "^16.11.26",
     "@types/react": "^17.0.44",
     "@types/react-dom": "^17.0.15",
+    "@types/uuid": "^8.3.4",
+    "moveable": "^0.28.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-hexagon": "^1.1.3",
     "react-scripts": "5.0.0",
     "typescript": "^4.6.3",
+    "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -39,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-use-uuid": "^2.0.1"
   }
 }
