--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "test-rotate",
   "version": "0.1.0",
+  "homepage": "/hex-puzzle/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
@@ -22,7 +23,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && rm -rf docs && mv build docs",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
