--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "test-rotate",
   "version": "0.1.0",
-  "homepage": "/hex-puzzle/",
+  "homepage": "https://neuralcoder3.github.io/hex-puzzle",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
@@ -22,8 +22,10 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
-    "build": "react-scripts build && rm -rf docs && mv build docs",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -46,6 +48,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^3.2.3",
     "react-use-uuid": "^2.0.1"
   }
 }
